# poisson_cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: CMakeLists.txt  bench_solvers.cpp  profile_cg.cpp
cmake/: FindFFTW3.cmake  poissonConfig.cmake.in
data/reference/: dielectric_zero_rho_N40.json  solver1d_uniform_rho_N50.json  sor2d_linear_N24.json  thomas_dominant_N40.json
data/snapshots/: amr.json  amr_dipole.json  amr_scatter.json  sor2d_N32.json
docs/: ALGORITHMS.md  ARCHITECTURE.md  CHANGELOG.md  Doxyfile  PERFORMANCE.md  RESULTS.md  doxygen_custom.css
docs/sphinx/: api.md  conf.py  custom_vcycle.md  examples.md  index.md  installation.md  quickstart.md  requirements.txt
examples/: CMakeLists.txt  main.cpp
include/poisson/amr/: morton.hpp  quadtree.hpp  solver.hpp
include/poisson/core/: grid.hpp
include/poisson/fv/: dielectric.hpp  solver1d.hpp  solver2d.hpp
include/poisson/io/: json_io.hpp
include/poisson/iter/: cg.hpp  poisson_cg.hpp
include/poisson/linalg/: thomas.hpp
include/poisson/mg/: vcycle.hpp
include/poisson/spectral/: dst1d.hpp  dst2d.hpp  fftw_wrap.hpp
python/: CMakeLists.txt  bindings.cpp  dump_reference.py  make_banner.py  plot_cg.py  plot_figures.py  plot_tp_style.py
python/notebooks/: compare_petsc.ipynb
python/poisson_cpp/: __init__.py  __init__.pyi  _core.pyi
src/amr/: quadtree.cpp  solver.cpp
src/fv/: dielectric.cpp  solver1d.cpp  solver2d.cpp
src/iter/: poisson_cg.cpp
src/linalg/: thomas.cpp
src/mg/: vcycle.cpp
src/spectral/: dst1d.cpp  dst2d.cpp
tests/: CMakeLists.txt  test_amr_solver.cpp  test_benchmark.cpp  test_cg.cpp  test_conservation.cpp  test_dielectric.cpp  test_dst1d.cpp  test_dst2d.cpp  test_invariants.cpp  test_morton.cpp  test_prolongate.cpp  test_quadtree.cpp  test_reference.cpp  test_solver1d.cpp  test_solver2d.cpp  test_thomas.cpp  test_vcycle.cpp
tests/python/: conftest.py  test_amr.py  test_cg.py  test_dataclasses.py  test_dst.py  test_grid.py  test_io.py  test_mg.py  test_solver1d.py  test_solver2d.py  test_thomas.py  test_utility.py
